# bazel-idl

./: .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  shell.nix
accounts/: BUILD.bazel  accounts.idl
bazel/: haskell.bzl
nixpkgs/: default.nix  haskell-packages.nix
profiles/: BUILD.bazel  Test.hs  profiles.idl
tools/: BUILD.bazel  avro.sh
